--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,7 +36,16 @@ jobs:
       - run: npm install
       - run: npm run build
         env:
+            NODE_ENV: production
             VITE_BASE_URL: '/meret-and-james/'
+      - name: Debug build output
+        run: |
+          echo "Contents of dist directory:"
+          ls -la dist/
+          echo "Contents of dist/assets directory:"
+          ls -la dist/assets/
+          echo "Contents of dist/index.html:"
+          cat dist/index.html
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
