--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "meret-james-website",
   "version": "0.0.0",
+  "homepage": "https://jamesfisher-geo.github.io/meret-and-james/",
   "private": true,
   "type": "module",
   "scripts": {
@@ -8,7 +9,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist"
   },
   "dependencies": {
     "@mkkellogg/gaussian-splats-3d": "^0.4.5",
@@ -24,6 +27,7 @@
     "@vue/eslint-config-prettier": "^9.0.0",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "gh-pages": "^6.3.0",
     "prettier": "^3.2.5",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1"
